# SomeDaysOfPython

./: .gitignore  .tool-versions  README.md
001_basics/: 001_first_calc.ipynb
001_the_complete_python_bootcamp/: README.md
001_the_complete_python_bootcamp/002_objects_and_data_structs/: 003_strings.ipynb  004_string_preperties_and_methods.ipynb  006_lists.ipynb  007_dictionaries.ipynb  009_sets.ipynb  010_booleans.ipynb
001_the_complete_python_bootcamp/003_comparison_operators/: 001_comparison_operators.ipynb
001_the_complete_python_bootcamp/004_statements/: 002_for_loops.ipynb  004_useful_operators.ipynb
001_the_complete_python_bootcamp/005_methods_and_functions/: 002_introduction_to_functions.ipynb  (+3 more)
002_objects_and_data_structs/: 001_numbers.ipynb  002_variable_assignments.ipynb  003_strings.ipynb  005_print_formatting.ipynb  008_tuples.ipynb  011_io_with_files.ipynb  myfile.txt
003_the_ultimate_django_series/: README.md
004_statements/: 001_if_Elif_else.ipynb  003_while_loops.ipynb  005_list_comperehentions.ipynb
005_fastapi_the_complete_course_2024/: README.md
005_fastapi_the_complete_course_2024/books/: books.py  books2.py  pyproject.toml
005_fastapi_the_complete_course_2024/todos/: README.md  database.py  main.py  pyproject.toml  testdb.db  todos.py
005_fastapi_the_complete_course_2024/todos/alembic/versions/: 95bf4dbc2d65_add_phone_number_to_users.py
005_fastapi_the_complete_course_2024/todos/routers/: admin.py  auth.py  todos.py  user.py
005_fastapi_the_complete_course_2024/todos/static/js/: base.js
005_fastapi_the_complete_course_2024/todos/templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  todo.html
005_fastapi_the_complete_course_2024/todos/test/: test_example.py  test_todos.py
005_fastapi_the_complete_course_2024/todos/tests/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
005_methods_and_functions/: 001_methods.ipynb  005_nested_statements_and_scope.ipynb
006_Python_Testing_with_pytest/: README.md
006_milestone_project_1/: tictactoe.ipynb
007_oop/: 002_methods.ipynb  004_special_magic_dunder_methods.ipynb
008_modules_and_packages/: two.py
009_errors_and_exceptions/: 001_errors_and_exceptions_handling.ipynb
012_card_game_war/: game.ipynb
(+178 files in other folders)
