[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Vitali Tatarintev <vtatarintev@gitlab.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
passlib = "^1.7.4"
bcrypt = "4.0.1"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
