[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Vitali Tatarintev <vtatarintev@gitlab.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
passlib = "^1.7.4"
bcrypt = "4.0.1"
uvicorn = "^0.32.0"
python-multipart = "^0.0.17"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pymysql = "^1.1.1"
alembic = "^1.14.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
